<resources>
    <string name="app_name">Supervise</string>
    <string name="welcome">Welcome</string>
    <string name="monitor">MONITOR </string>
    <string name="to">TO</string>
    <string name="supervision">SUPERVISION</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Create Account</string>
    <string name="attempts">Number of Attempts</string>
    <string name="login">LOGIN</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="mail">Email</string>
    <string name="forgot">Forgot Password</string>
    <string name="submit">SUBMIT</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="view">View</string>
    <string name="add">Add</string>
    <string name="subitem">Subitem</string>
    <string name="subite">Subite</string>
    <string name="subit">Subit</string>

</resources>
