<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/z"
    android:id="@+id/second_container"
    tools:context=".Login">

    <ImageView
        android:layout_width="300sp"
        android:layout_height="130sp"
        android:layout_gravity="center"
        android:background="@mipmap/clope"
        android:fadeScrollbars="true"
        android:layout_marginTop="50sp"
        android:src="@mipmap/clope"/>

    <EditText
        android:id="@+id/userid"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:text="@string/username"
        android:hint="@string/username"
        android:textSize="30dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/passid"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:textSize="30sp"
        android:textStyle="italic"
        android:text="@string/password"
        android:textColor="@color/colorPrimary"
        android:hint="@string/password"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="60sp"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:text="@string/login"
        android:clickable="true"
        android:background="@android:color/holo_blue_bright"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="35dp"/>

    <TextView
        android:id="@+id/forgotpassid"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="italic"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:textSize="30sp"
        android:text="@string/forgot"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/signup"
        android:clickable="true"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginRight="80dp"
        android:layout_marginLeft="80dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/attempts"
        android:clickable="true"
        android:textColor="@color/colorPrimaryDark"/>






</LinearLayout>